[package]
name = "harper-florb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive", "string"] }
harper-literate-haskell = "0.31.0"
harper-comments = "0.31.0"
harper-core = "0.31.0"
harper-typst = "0.31.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
